should fix overflow issue

--- a/src/styles/generics.scss
+++ b/src/styles/generics.scss
@@ -7,7 +7,7 @@ body {
     color: var(--txwhite);
     font-family: var(--sans-serif);
     max-width: 100%;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 
 }
 
