--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -121,12 +121,3 @@
         color: var(--link-blue);
     }
 }
-
-.bar-right {
-    width: 300px;
-    line-height: 24px;
-
-    h3 {
-        font-weight: 600;
-    }
-}
